# bpf-hole

./: Cargo.toml  README.md  flake.nix
bpf-hole/: Cargo.toml  build.rs
bpf-hole-common/: Cargo.toml
bpf-hole-common/src/: consts.rs  dns.rs  lib.rs
bpf-hole-ebpf/: Cargo.toml
bpf-hole-ebpf/src/: main.rs
bpf-hole-tc/: Cargo.toml
bpf-hole-tc/src/: main.rs
bpf-hole-xdp/: Cargo.toml
bpf-hole-xdp/src/: lib.rs  main.rs
bpf-hole/src/: lib.rs  main.rs
nix/: helpers.nix
nix/pkgs/aya-tool/: default.nix
pkgs/aya-tool/: default.nix
